[sc-7250] Prevent NER management page to get frozen
Display no more than 1000 rows in the NER list, and display a message when some NERs are hidden.

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -494,6 +494,7 @@
 	"ner-list.delete-entity-tooltip": "Suprimeix el NER seleccionat",
 	"ner-list.duplicates": "Duplicats",
 	"ner-list.duplicates-of": "Duplicats de",
+	"ner-list.more-ners": "Hi ha {{count}} NER més, utilitzeu el filtratge per restringir la vostra selecció.",
 	"ner-list.remove-duplicate-tooltip": "Sortiu dels duplicats",
 	"ner-management.add-family": "Família NER",
 	"ner-management.page-description": "Creeu la vostra pròpia llista de NER, personalitzeu-los i, a continuació, entreneu-los. Podeu carregar-los des d'un fitxer CSV per accelerar el procés o introduir tots els NER manualment.",
