Fix [sc-8024]: French translation of upload data item

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -684,6 +684,7 @@
 	"sidenav.sync": "Sincronitzar",
 	"sidenav.synonyms": "Sinònims",
 	"sidenav.trainings": "Entrenaments",
+	"sidenav.upload-data": "Pujar dades",
 	"sidenav.users": "Usuaris",
 	"sidenav.widgets": "Widgets",
 	"standalone.nua-key-status.invalid": "La clau Nuclia Understanding API proporcionada no és vàlida",
