--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -684,6 +684,7 @@
 	"sidenav.sync": "Sincronizar",
 	"sidenav.synonyms": "Sinónimos",
 	"sidenav.trainings": "Entrenamientos",
+	"sidenav.upload-data": "Subir datos",
 	"sidenav.users": "Usuarios",
 	"sidenav.widgets": "Widgets",
 	"standalone.nua-key-status.invalid": "La clave Nuclia Understanding API proporcionada no es válida",
