[sc-7934] Display the versions used in NucliaDB admin
  - Display NucliaDB and NucliaDB Admin version in the home page
  - Display a toast message when a newer version of NucliaDB or NucliaDB Admin is available

--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -687,9 +687,14 @@
 	"sidenav.upload-data": "Subir datos",
 	"sidenav.users": "Usuarios",
 	"sidenav.widgets": "Widgets",
-	"standalone.nua-key-status.invalid": "La clave Nuclia Understanding API proporcionada no es válida",
-	"standalone.nua-key-status.loading-error": "Error al cargar el estado de la clave Nuclia Understanding API",
-	"standalone.nua-key-status.not-provided": "No se proporcionó ninguna clave Nuclia Understanding API",
+	"standalone.new-version-available-toast": "Hay disponible una versión más nueva de NucliaDB.",
+	"standalone.nua-key-status.invalid.how-to-get-nua-key": "Si no tiene una clave API de NUA, siga esta <a href=\"https://docs.nuclia.dev/docs/docs/getting-started/on-premise\" rel=\"noopener noreferrer\" target=\"_blank\">guía</a>.",
+	"standalone.nua-key-status.invalid.loading-error": "Error al cargar el estado de la clave Nuclia Understanding API",
+	"standalone.nua-key-status.invalid.not-provided": "No se proporcionó ninguna clave Nuclia Understanding API",
+	"standalone.nua-key-status.invalid.provide-by": "Proporcione su clave API de NUA utilizando la variable de entorno <code>NUA_API_KEY</code> o la marca cli <code>--nuclia-api-key</code> .",
+	"standalone.nua-key-status.invalid.title": "La clave Nuclia Understanding API proporcionada no es válida",
+	"standalone.nua-key-status.valid.nua-allows-to": "Su clave API de NUA le permite utilizar <a href=\"https://nuclia.cloud\"target=\"_blank\">el motor de procesamiento en la nube de Nuclia</a>.",
+	"standalone.nua-key-status.valid.store-locally": "Sus datos permanecen almacenados localmente, pero tiene acceso a un panel para seguir sus métricas y más.",
 	"standalone.search-no-nua-key": "Estás desconectado del servidor nuclia.cloud y solo obtendrás respuestas basadas en palabras clave. Los resultados semánticos y la búsqueda de gráficos de conocimiento no funcionarán. Para una experiencia de búsqueda completa, conéctese al servidor utilizando una clave Nuclia Understanding API.",
 	"standalone.upload-no-nua-key": "No estás conectado al servidor <strong>nuclia.cloud</strong> y no se procesarán nuevos datos.",
 	"stash.add_user": "Añadir usuario",
