--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -695,7 +695,7 @@
 	"standalone.nua-key-status.invalid.title": "La clau Nuclia Understanding API proporcionada no és vàlida",
 	"standalone.nua-key-status.valid.nua-allows-to": "La vostra clau de l'API NUA us permet utilitzar <a href=\"https://nuclia.cloud\"target=\"_blank\">Cloud Processing Engine de Nuclia</a>.",
 	"standalone.nua-key-status.valid.store-locally": "Les vostres dades es mantenen emmagatzemades localment, però teniu accés a un tauler per seguir les vostres mètriques i molt més.",
-	"standalone.search-no-nua-key": "Esteu desconnectat del servidor nuclia.cloud i només obtindreu respostes basades en paraules clau. Els resultats semàntics i la cerca de gràfics de coneixement no funcionaran. Per obtenir una experiència de cerca completa, connecteu-vos al servidor mitjançant una clau Nuclia Understanding API.",
+	"standalone.search-no-nua-key": "Esteu desconnectat del servidor nuclia.cloud i només obtindreu respostes basades en paraules clau. Els resultats semàntics no funcionaran. Per obtenir una experiència de cerca completa, connecteu-vos al servidor mitjançant una clau d'API Nuclia Understanding.",
 	"standalone.upload-no-nua-key": "No esteu connectat al servidor <strong>nuclia.cloud</strong> i les dades noves no es processaran.",
 	"stash.add_user": "Afegeix l'usuari",
 	"stash.added_user": "L'usuari {{user}} s'ha afegit",
