--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -696,7 +696,7 @@
 	"standalone.nua-key-status.invalid.title": "Nuclia Understanding API key provided is invalid",
 	"standalone.nua-key-status.valid.nua-allows-to": "Your NUA API Key allows you to use <a href=\"https://nuclia.cloud\"target=\"_blank\">Nuclia’s Cloud Processing Engine</a>.",
 	"standalone.nua-key-status.valid.store-locally": "Your data remains stored locally, but you have access to a dashboard for following your metrics and more.",
-	"standalone.search-no-nua-key": "You are disconnected from the nuclia.cloud server and you will only get keyword-based answers. Semantic results and knowledge graph search will not work. For a complete search experience, please connect to the server using a Nuclia Understanding API key.",
+	"standalone.search-no-nua-key": "You are disconnected from the nuclia.cloud server and you will only get keyword-based answers. Semantic results will not work. For a complete search experience, please connect to the server using a Nuclia Understanding API key.",
 	"standalone.upload-no-nua-key": "You are not connected to the <strong>nuclia.cloud</strong> server and new data won’t be processed.",
 	"stash.add_user": "Add user",
 	"stash.added_user": "{{user}} has been added",
