[sc-7934] warning when new nucliadb version is available (#1189)
* Fix dropdown button style

* [sc-7934] Display the versions used in NucliaDB admin

  - Display NucliaDB and NucliaDB Admin version in the home page
  - Display a toast message when a newer version of NucliaDB or NucliaDB Admin is available

* Fix unit tests and search warning when no NUA

* Fix search options white space in resource list

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -687,10 +687,15 @@
 	"sidenav.upload-data": "Pujar dades",
 	"sidenav.users": "Usuaris",
 	"sidenav.widgets": "Widgets",
-	"standalone.nua-key-status.invalid": "La clau Nuclia Understanding API proporcionada no és vàlida",
-	"standalone.nua-key-status.loading-error": "S'ha produït un error en carregar l'estat de la clau Nuclia Understanding API",
-	"standalone.nua-key-status.not-provided": "No s'ha proporcionat cap clau de Nuclia Understanding API",
-	"standalone.search-no-nua-key": "Esteu desconnectat del servidor nuclia.cloud i només obtindreu respostes basades en paraules clau. Els resultats semàntics i la cerca de gràfics de coneixement no funcionaran. Per obtenir una experiència de cerca completa, connecteu-vos al servidor mitjançant una clau Nuclia Understanding API.",
+	"standalone.new-version-available-toast": "Hi ha disponible una versió més nova de NucliaDB.",
+	"standalone.nua-key-status.invalid.how-to-get-nua-key": "Si no teniu una clau d'API NUA, seguiu aquesta <a href=\"https://docs.nuclia.dev/docs/docs/getting-started/on-premise\" rel=\"noopener noreferrer\" target=\"_blank\">guia</a>.",
+	"standalone.nua-key-status.invalid.loading-error": "S'ha produït un error en carregar l'estat de la clau Nuclia Understanding API",
+	"standalone.nua-key-status.invalid.not-provided": "No s'ha proporcionat cap clau de Nuclia Understanding API",
+	"standalone.nua-key-status.invalid.provide-by": "Proporcioneu la vostra clau de l'API NUA mitjançant la variable d'entorn <code>NUA_API_KEY</code> o el senyalador cli <code>--nuclia-api-key</code> .",
+	"standalone.nua-key-status.invalid.title": "La clau Nuclia Understanding API proporcionada no és vàlida",
+	"standalone.nua-key-status.valid.nua-allows-to": "La vostra clau de l'API NUA us permet utilitzar <a href=\"https://nuclia.cloud\"target=\"_blank\">Cloud Processing Engine de Nuclia</a>.",
+	"standalone.nua-key-status.valid.store-locally": "Les vostres dades es mantenen emmagatzemades localment, però teniu accés a un tauler per seguir les vostres mètriques i molt més.",
+	"standalone.search-no-nua-key": "Esteu desconnectat del servidor nuclia.cloud i només obtindreu respostes basades en paraules clau. Els resultats semàntics no funcionaran. Per obtenir una experiència de cerca completa, connecteu-vos al servidor mitjançant una clau d'API Nuclia Understanding.",
 	"standalone.upload-no-nua-key": "No esteu connectat al servidor <strong>nuclia.cloud</strong> i les dades noves no es processaran.",
 	"stash.add_user": "Afegeix l'usuari",
 	"stash.added_user": "L'usuari {{user}} s'ha afegit",
