--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -688,10 +688,15 @@
 	"sidenav.upload-data": "Upload data",
 	"sidenav.users": "Users",
 	"sidenav.widgets": "Widgets",
-	"standalone.nua-key-status.invalid": "Nuclia Understanding API key provided is invalid",
-	"standalone.nua-key-status.loading-error": "Error while loading Nuclia Understanding API key status",
-	"standalone.nua-key-status.not-provided": "No Nuclia Understanding API key provided",
-	"standalone.search-no-nua-key": "You are disconnected from the nuclia.cloud server and you will only get keyword-based answers. Semantic results and knowledge graph search will not work. For a complete search experience, please connect to the server using a Nuclia Understanding API key.",
+	"standalone.new-version-available-toast": "A newer version of NucliaDB is available.",
+	"standalone.nua-key-status.invalid.how-to-get-nua-key": "If you don't have a NUA API Key follow this <a href=\"https://docs.nuclia.dev/docs/docs/getting-started/on-premise\" rel=\"noopener noreferrer\" target=\"_blank\">guide</a>.",
+	"standalone.nua-key-status.invalid.loading-error": "Error while loading Nuclia Understanding API key status",
+	"standalone.nua-key-status.invalid.not-provided": "No Nuclia Understanding API key provided",
+	"standalone.nua-key-status.invalid.provide-by": "Provide your NUA API Key by using the environment variable <code>NUA_API_KEY</code> or the <code>--nuclia-api-key</code> cli flag.",
+	"standalone.nua-key-status.invalid.title": "Nuclia Understanding API key provided is invalid",
+	"standalone.nua-key-status.valid.nua-allows-to": "Your NUA API Key allows you to use <a href=\"https://nuclia.cloud\"target=\"_blank\">Nuclia’s Cloud Processing Engine</a>.",
+	"standalone.nua-key-status.valid.store-locally": "Your data remains stored locally, but you have access to a dashboard for following your metrics and more.",
+	"standalone.search-no-nua-key": "You are disconnected from the nuclia.cloud server and you will only get keyword-based answers. Semantic results will not work. For a complete search experience, please connect to the server using a Nuclia Understanding API key.",
 	"standalone.upload-no-nua-key": "You are not connected to the <strong>nuclia.cloud</strong> server and new data won’t be processed.",
 	"stash.add_user": "Add user",
 	"stash.added_user": "{{user}} has been added",
