--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -688,10 +688,15 @@
 	"sidenav.upload-data": "Télécharger",
 	"sidenav.users": "Utilisateurs",
 	"sidenav.widgets": "Widgets",
-	"standalone.nua-key-status.invalid": "La clé Nuclia Understanding API fournie n'est pas valide",
-	"standalone.nua-key-status.loading-error": "Erreur lors du chargement de l'état de la clé Nuclia Understanding API",
-	"standalone.nua-key-status.not-provided": "Aucune clé Nuclia Understanding API fournie",
-	"standalone.search-no-nua-key": "Vous êtes déconnecté du serveur nuclia.cloud et vous n'obtiendrez que des réponses basées sur des mots clés. Les résultats sémantiques et la recherche par graphe de connaissances ne fonctionneront pas. Pour une expérience de recherche complète, veuillez vous connecter au serveur à l'aide d'une clé Nuclia Understanding API.",
+	"standalone.new-version-available-toast": "Une version plus récente de NucliaDB est disponible.",
+	"standalone.nua-key-status.invalid.how-to-get-nua-key": "Si vous ne possédez pas de clé API NUA, suivez ce <a href=\"https://docs.nuclia.dev/docs/docs/getting-started/on-premise\" rel=\"noopener noreferrer\" target=\"_blank\">guide</a>.",
+	"standalone.nua-key-status.invalid.loading-error": "Erreur lors du chargement de l'état de la clé Nuclia Understanding API",
+	"standalone.nua-key-status.invalid.not-provided": "Aucune clé Nuclia Understanding API fournie",
+	"standalone.nua-key-status.invalid.provide-by": "Fournissez votre clé API NUA en utilisant la variable d'environnement <code>NUA_API_KEY</code> ou l'indicateur cli <code>--nuclia-api-key</code> .",
+	"standalone.nua-key-status.invalid.title": "La clé Nuclia Understanding API fournie n'est pas valide",
+	"standalone.nua-key-status.valid.nua-allows-to": "Votre clé API NUA vous permet d'utiliser le <a href=\"https://nuclia.cloud\"target=\"_blank\">moteur de traitement cloud de Nuclia</a>.",
+	"standalone.nua-key-status.valid.store-locally": "Vos données restent stockées localement, mais vous avez accès à un tableau de bord pour suivre vos métriques et bien plus encore.",
+	"standalone.search-no-nua-key": "Vous êtes déconnecté du serveur nuclia.cloud et vous n'obtiendrez que des réponses basées sur des mots clés. Les résultats sémantiques ne fonctionneront pas. Pour une expérience de recherche complète, veuillez vous connecter au serveur à l'aide d'une clé API Nuclia Understanding.",
 	"standalone.upload-no-nua-key": "Vous n'êtes pas connecté au serveur <strong>nuclia.cloud</strong> et les nouvelles données ne seront pas traitées.",
 	"stash.add_user": "Ajouter un utilisateur",
 	"stash.added_user": "{{user}} a été ajouté",
