--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -400,7 +400,7 @@
 	"getting-started.intro.three-steps-headline": "You’re just three short steps away from generating answers from your data",
 	"getting-started.intro.title": "Get started in just 3 simple steps",
 	"getting-started.processing.description": "Depending on the contents, it can take a few minutes to process your data into the NucliaDB vector database.",
-	"getting-started.processing.estimated-time": "Estimated processing time: {{estimation}}min",
+	"getting-started.processing.estimated-time": "Estimated processing time: {{estimation}}",
 	"getting-started.processing.status.estimated-time": "{{estimation}} min left",
 	"getting-started.processing.status.failed": "Failed",
 	"getting-started.processing.status.processed": "Processing completed",
