--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -888,6 +888,17 @@
 	"user.logout": "Déconnexion",
 	"validation.name_required": "Ajoutez vos nom et prénom",
 	"validation.url_required": "Saisir une URL valide (par exemple https://nuclia.com)",
+	"widget.copilot.agent": "Définition de l'agent",
+	"widget.copilot.agent-placeholder": "Guide touristique",
+	"widget.copilot.apply": "Appliquer",
+	"widget.copilot.description": "Créez et définissez votre copilote IA en définissant un comportement, qui générera le prompt utilisateur.",
+	"widget.copilot.filters": "Filtres",
+	"widget.copilot.generate": "Générer un prompt utilisateur",
+	"widget.copilot.prompt": "Prompt",
+	"widget.copilot.title": "Créez votre copilote IA",
+	"widget.copilot.topic": "Sujet",
+	"widget.copilot.topic-help": "Définit un comportement en fonction d'un objectif donné. Elle impactera son ton, son style, son vocabulaire, son domaine d'expertise, ou encore ses opinions.",
+	"widget.copilot.topic-placeholder": "Toronto",
 	"widget.generator.advanced.display-category.dark-mode.help": "Activer le thème sombre sur le widget",
 	"widget.generator.advanced.display-category.dark-mode.label": "Mode sombre",
 	"widget.generator.advanced.display-category.display-metadata.help": "Afficher quelques métadonnées sur les résultats de recherche",
