--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -711,6 +711,7 @@
 	"stash.config.option.cohere": "Cohere Command (beta)",
 	"stash.config.option.disabled": "Deshabilitado",
 	"stash.config.option.enabled": "Habilitado",
+	"stash.config.option.gemini-pro": "Google Gemini Pro",
 	"stash.config.option.generative-multilingual-2023": "Modo sin generación",
 	"stash.config.option.multilingual-2023-08-16": "multilingual (alpha)",
 	"stash.config.option.nuclia-atlas-v1": "Nuclia Atlas",
