[sc-7960] Support cloud-file upload

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -465,11 +465,16 @@
 	"language.ru": "Russian",
 	"language.sv": "Swedish",
 	"language.tr": "Turkish",
-	"modal.create_link.csv_file": "CSV file",
-	"modal.create_link.input": "Type or paste the link",
-	"modal.create_link.multiple": "Multiple links",
-	"modal.create_link.textarea": "Paste some links (one per line)",
+	"modal.create_link.csv-file": "Links from a CSV file",
+	"modal.create_link.link-to.file": "an online file",
+	"modal.create_link.link-to.label": "Link to:",
+	"modal.create_link.link-to.web-page": "a web page",
+	"modal.create_link.multiple-links.label": "Multiple links",
+	"modal.create_link.multiple-links.placeholder": "One link per line",
+	"modal.create_link.single-link.label": "Single link",
+	"modal.create_link.single-link.placeholder": "Type or paste the link",
 	"modal.create_link.title": "Add links",
+	"modal.create_link.upload": "Upload:",
 	"modal.show_waiting_list": "Check file uploads",
 	"modal.upload.drop": "Drop files here",
 	"modal.upload.drop_folder": "Drop folders here",
