--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -464,11 +464,16 @@
 	"language.ru": "Ruso",
 	"language.sv": "Sueco",
 	"language.tr": "Turco",
-	"modal.create_link.csv_file": "Archivo CSV",
-	"modal.create_link.input": "Escribe o pega el enlace",
-	"modal.create_link.multiple": "Múltiples enlaces",
-	"modal.create_link.textarea": "Pegue algunos enlaces (uno por línea)",
+	"modal.create_link.csv-file": "Enlaces desde un archivo CSV",
+	"modal.create_link.link-to.file": "un archivo en línea",
+	"modal.create_link.link-to.label": "Enlace a:",
+	"modal.create_link.link-to.web-page": "una página web",
+	"modal.create_link.multiple-links.label": "Múltiples enlaces",
+	"modal.create_link.multiple-links.placeholder": "Un enlace por línea",
+	"modal.create_link.single-link.label": "Enlace único",
+	"modal.create_link.single-link.placeholder": "Escribe o pega el enlace",
 	"modal.create_link.title": "Añadir enlaces",
+	"modal.create_link.upload": "Subir:",
 	"modal.show_waiting_list": "Compruebe la cola de ficheros",
 	"modal.upload.drop": "Drop files here",
 	"modal.upload.drop_folder": "Arrastra una carpeta",
