--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -464,11 +464,16 @@
 	"language.ru": "Rus",
 	"language.sv": "Suec",
 	"language.tr": "Turc",
-	"modal.create_link.csv_file": "Arxiu CSV",
-	"modal.create_link.input": "Escriu o enganxa l’enllaç",
-	"modal.create_link.multiple": "Múltiples enllaços",
-	"modal.create_link.textarea": "Enganxeu alguns enllaços (un per línia)",
+	"modal.create_link.csv-file": "Enllaços d'un fitxer CSV",
+	"modal.create_link.link-to.file": "un fitxer en línia",
+	"modal.create_link.link-to.label": "Enllaç a:",
+	"modal.create_link.link-to.web-page": "una pàgina web",
+	"modal.create_link.multiple-links.label": "Múltiples enllaços",
+	"modal.create_link.multiple-links.placeholder": "Un enllaç per línia",
+	"modal.create_link.single-link.label": "Enllaç únic",
+	"modal.create_link.single-link.placeholder": "Escriviu o enganxeu l'enllaç",
 	"modal.create_link.title": "Afegeix enllaços",
+	"modal.create_link.upload": "Carrega:",
 	"modal.show_waiting_list": "Comprova la cua de fitxers",
 	"modal.upload.drop": "Llança els fitxers aqui",
 	"modal.upload.drop_folder": "Arrossega una carpeta",
