--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -465,11 +465,16 @@
 	"language.ru": "Russe",
 	"language.sv": "Suédois",
 	"language.tr": "Turc",
-	"modal.create_link.csv_file": "Fichier CSV",
-	"modal.create_link.input": "Tapez ou collez le lien",
-	"modal.create_link.multiple": "Liens multiples",
-	"modal.create_link.textarea": "Collez quelques liens (un par ligne)",
+	"modal.create_link.csv-file": "Liens à partir d'un fichier CSV",
+	"modal.create_link.link-to.file": "un fichier en ligne",
+	"modal.create_link.link-to.label": "Lien vers:",
+	"modal.create_link.link-to.web-page": "une page Web",
+	"modal.create_link.multiple-links.label": "Liens multiples",
+	"modal.create_link.multiple-links.placeholder": "Un lien par ligne",
+	"modal.create_link.single-link.label": "Lien unique",
+	"modal.create_link.single-link.placeholder": "Tapez ou collez le lien",
 	"modal.create_link.title": "Ajouter des liens",
+	"modal.create_link.upload": "Télécharger:",
 	"modal.show_waiting_list": "Vérifier les téléchargements de fichiers",
 	"modal.upload.drop": "Déposez les fichiers ici",
 	"modal.upload.drop_folder": "Déposez les dossiers ici",
