--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -888,16 +888,16 @@
 	"validation.name_required": "Introdueix el nom i cognoms",
 	"validation.url_required": "Introdueix una URL vàlida (per exemple https://nuclia.com)",
 	"widget.copilot.agent": "Definició d'agent",
-	"widget.copilot.agent-placeholder": "Guia turística",
+	"widget.copilot.agent-placeholder": "Exemple: Guia turística",
 	"widget.copilot.apply": "Aplicar",
-	"widget.copilot.description": "Creeu i definiu el vostre Copilot IA definint un comportament, que generarà el prompt de l'usuari.",
+	"widget.copilot.description": "Creeu i definiu el vostre Copilot IA definint un comportament que generarà el prompt de l'usuari.",
 	"widget.copilot.filters": "Filtres",
 	"widget.copilot.generate": "Genera un prompt d'usuari",
 	"widget.copilot.prompt": "Prompt",
 	"widget.copilot.title": "Crea el teu AI Copilot",
 	"widget.copilot.topic": "Tema",
 	"widget.copilot.topic-help": "Defineix el comportament segons un objectiu determinat. Afectarà el seu to, el seu estil, el seu vocabulari, el seu domini d'experiència o fins i tot les seves opinions.",
-	"widget.copilot.topic-placeholder": "Toronto",
+	"widget.copilot.topic-placeholder": "Exemple: Toronto",
 	"widget.generator.advanced.display-category.dark-mode.help": "Activa el tema fosc al giny",
 	"widget.generator.advanced.display-category.dark-mode.label": "Mode fosc",
 	"widget.generator.advanced.display-category.display-metadata.help": "Mostra algunes metadades als resultats de la cerca",
