--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -889,6 +889,17 @@
 	"user.logout": "Log out",
 	"validation.name_required": "Add your name and surnames",
 	"validation.url_required": "Enter a valid URL (e.g. https://nuclia.com)",
+	"widget.copilot.agent": "Agent definition",
+	"widget.copilot.agent-placeholder": "Example: Tourist guide",
+	"widget.copilot.apply": "Apply",
+	"widget.copilot.description": "Create and define your AI Copilot by defining a behavior which will generate the user prompt.",
+	"widget.copilot.filters": "Filters",
+	"widget.copilot.generate": "Generate user prompt",
+	"widget.copilot.prompt": "Prompt",
+	"widget.copilot.title": "Create your AI Copilot",
+	"widget.copilot.topic": "Topic",
+	"widget.copilot.topic-help": "Define behavior according to a given goal. It will impact its tone, its style, its vocabulary, its domain of expertise, or even its opinions.",
+	"widget.copilot.topic-placeholder": "Example: Toronto",
 	"widget.generator.advanced.display-category.dark-mode.help": "Enable dark theme on the widget",
 	"widget.generator.advanced.display-category.dark-mode.label": "Dark mode",
 	"widget.generator.advanced.display-category.display-metadata.help": "Display some metadata on the search results",
