--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -888,6 +888,17 @@
 	"user.logout": "Salir",
 	"validation.name_required": "Añade tu nombre y apellidos",
 	"validation.url_required": "Introduce una URL válida (por ejemplo https://nuclia.com)",
+	"widget.copilot.agent": "Definición del agente",
+	"widget.copilot.agent-placeholder": "Ejemplo: guía turística",
+	"widget.copilot.apply": "Aplicar",
+	"widget.copilot.description": "Cree y defina su Copilot IA definiendo un comportamiento que generará el prompt del usuario.",
+	"widget.copilot.filters": "Filtros",
+	"widget.copilot.generate": "Generar un prompt de usuario",
+	"widget.copilot.prompt": "Prompt",
+	"widget.copilot.title": "Crea tu copiloto de IA",
+	"widget.copilot.topic": "Tema",
+	"widget.copilot.topic-help": "Define el comportamiento de acuerdo con un objetivo determinado. Afectará su tono, su estilo, su vocabulario, su dominio de experiencia o incluso sus opiniones.",
+	"widget.copilot.topic-placeholder": "Ejemplo: Toronto",
 	"widget.generator.advanced.display-category.dark-mode.help": "Habilitar tema oscuro en el widget",
 	"widget.generator.advanced.display-category.dark-mode.label": "Modo oscuro",
 	"widget.generator.advanced.display-category.display-metadata.help": "Mostrar algunos metadatos en los resultados de búsqueda.",
